--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE HYML>
+<head>
+  <title>Where stupidity roams free</title>
+  <style>
+		.scroll-box {
+    height: 100px;        /* Sets a fixed height */
+    width: 300px;         /* Sets a fixed width */
+    border: 1px solid #ccc; /* Adds a border for visibility */
+    overflow: auto;       /* Adds scroll bars only when needed */
+    padding: 10px;        /* Adds some space around the text */
+}
+		    body {
+      background-color: #5FC79D;
+      color: #000000;
+    }
+    imgg {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 2px;
+  width: 540px;
+}
+			  body {
+			      font-family: sans-serif;
+			  }
+		</style>
+</head>
