--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE HYML>
+<!DOCTYPE HTML>
+<html>
 <head>
   <title>Where stupidity roams free</title>
   <style>
@@ -24,3 +25,26 @@
 			  }
 		</style>
 </head>
+<body>
+<center>
+	<div
+     style="border: 1px solid #ddd;
+     border-radius: 4px;
+	 width: 600px;">
+		<div
+      style="width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+   	    <p><a href="/index2">Home</a></p>
+   	    <p>⠀⠀</p>
+  		<p><a href="/music">Music</a></p>
+   	    <p>⠀⠀</p>
+  		<p><a href="/about">About</a></p>
+  	</div>
+    </div>
+</center>
+</body>
+</html>
