--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
 <center>
 	<div
      style="border: 1px solid #ddd;
+	 border-style: double;
      border-radius: 1px;
 	 width: 600px;">
 		<div
-      style="width: 100%;
+      style="border: 1px solid #ddd;
+		     border-style: double;
+			 width: 100%;
              hight: 100%;
              display: flex;
              align-items: center;
