--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Where stupidity roams free</title>
   <style>
+	  div.double {border-style: double;}
 		.scroll-box {
     height: 100px;        /* Sets a fixed height */
     width: 300px;         /* Sets a fixed width */
@@ -11,7 +12,7 @@
     padding: 10px;        /* Adds some space around the text */
 }
 		    body {
-      background-color: #5FC79D;
+      background-color: #4C56BA;
       color: #000000;
     }
     imgg {
@@ -27,12 +28,11 @@
 </head>
 <body>
 <center>
-	<div
+	<div class="double" 
      style="border: 1px solid #ddd;
-	 border-style: double;
      border-radius: 1px;
 	 width: 600px;">
-		<div
+		<div class="double" 
       style="border: 1px solid #ddd;
 		     border-style: double;
 			 width: 100%;
@@ -41,11 +41,15 @@
              align-items: center;
              justify-content: center;
   ">
-   	    <p><a href="/index2">Home</a></p>
+   	    <p><a href="/index">Home</a></p>
+   	    <p>⠀⠀</p>
+  		<p><a href="/about">About</a></p>
    	    <p>⠀⠀</p>
   		<p><a href="/music">Music</a></p>
    	    <p>⠀⠀</p>
-  		<p><a href="/about">About</a></p>
+  		<p><a href="/other">Other Stuff</a></p>
+   	    <p>⠀⠀</p>
+  		<p><a href="/friends">Friends</a></p>
   	</div>
     </div>
 </center>
