--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
 <body>
 <center>
 	<div class="double" 
-     style="border: 1px solid #ddd;
-     border-radius: 1px;
+     style="border: 5px solid #ddd;
 	 width: 600px;">
 		<div class="double" 
-      style="border: 1px solid #ddd;
+      style="border: 3px solid #ddd;
 		     border-style: double;
 			 width: 100%;
              hight: 100%;
@@ -41,15 +40,32 @@
              align-items: center;
              justify-content: center;
   ">
-   	    <p><a href="/index">Home</a></p>
+   	    <p><a href="/alloftheabove/index">Home</a></p>
    	    <p>⠀⠀</p>
-  		<p><a href="/about">About</a></p>
+  		<p><a href="/alloftheabove/about">About</a></p>
    	    <p>⠀⠀</p>
-  		<p><a href="/music">Music</a></p>
+  		<p><a href="/alloftheabove/music">Music</a></p>
    	    <p>⠀⠀</p>
-  		<p><a href="/other">Other Stuff</a></p>
+  		<p><a href="/alloftheabove/artwork">Art</a></p>
    	    <p>⠀⠀</p>
-  		<p><a href="/friends">Friends</a></p>
+  		<p><a href="/alloftheabove/other">Other Stuff</a></p>
+   	    <p>⠀⠀</p>
+  		<p><a href="/alloftheabove/links">Links</a></p>
+   	    <p>⠀⠀</p>
+  		<p><a href="/alloftheabove/friends">Friends</a></p>
+  	</div>
+			<div class="double" 
+      style="border: 3px solid #ddd;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+		<h1>WELCOME TO IDIOCRACY.</h1>
+		<p>This is basically just a place for me to put random whatever I want. Maybe my friends will let me put some of their stuff here too, who knows?
+			Don't expect this site to have anything sofisticated on it, or whatever.</p>
   	</div>
     </div>
 </center>
