--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
              align-items: center;
              justify-content: center;
   ">
-		<h1>WELCOME TO IDIOCRACY.</h1>
+		<h1 align="center">WELCOME TO IDIOCRACY.</h1>
 				<br>
 		<p>This is basically just a place for me to put random whatever I want. Maybe my friends will let me put some of their stuff here too, who knows?
 			Don't expect this site to have anything sofisticated on it, or whatever.</p>
