--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title>Where stupidity roams free</title>
   <style>
 	  div.double {border-style: double;}
+	  h1 {
+		  text-align: center;
+	  }
 		.scroll-box {
     height: 100px;        /* Sets a fixed height */
     width: 300px;         /* Sets a fixed width */
@@ -63,7 +66,7 @@
              align-items: center;
              justify-content: center;
   ">
-		<h1 align="center">WELCOME TO IDIOCRACY.</h1>
+		<h1>WELCOME TO ALLOFTHEABOVE.</h1>
 				<br>
 		<p>This is basically just a place for me to put random whatever I want. Maybe my friends will let me put some of their stuff here too, who knows?
 			Don't expect this site to have anything sofisticated on it, or whatever.</p>
