--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
              display: flex;
              align-items: center;
              justify-content: center;
+			 flex-direction: column
   ">
 		<h1>WELCOME TO ALLOFTHEABOVE.</h1>
 				<br>
