--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
              display: flex;
              align-items: center;
              justify-content: center;
-			 flex-direction: column
+			 flex-direction: column;
+			 padding: 3px;
   ">
 		<h1>WELCOME TO ALLOFTHEABOVE.</h1>
 				<br>
