--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 <center>
 	<div class="double" 
      style="border: 5px solid #ddd;
-	 width: 600px;">
+	 width: 600px;
+		padding: 3px;
+		">
 		<div class="double" 
       style="border: 3px solid #ddd;
 		     border-style: double;
