--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
 			 flex-direction: column;
   ">
 		<h1>WELCOME TO ALLOFTHEABOVE.</h1>
-				<br>
 		<p>This is basically just a place for me to put random whatever I want. Maybe my friends will let me put some of their stuff here too, who knows?
-			Don't expect this site to have anything sofisticated on it, or whatever.</p>
+			Don't expect this site to have anything sophisticated on it, or whatever.</p>
   	</div>
     </div>
 </center>
