--- a/index.html
+++ b/index.html
@@ -73,6 +73,21 @@
 		<p>This is basically just a place for me to put random whatever I want. Maybe my friends will let me put some of their stuff here too, who knows?
 			Don't expect this site to have anything sophisticated on it, or whatever.</p>
   	</div>
+		</div>
+			<div class="double" 
+      style="border: 3px solid #ddd;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+				<a href="/alloftheabove/chris">
+				<img src="/alloftheabove/coolstuff/ccnow.png">
+				</a>
+				<p>"This website gave me rabies. Perfect 10/10!!" - Chris, of whom we will now copy.</p>
+  	</div>
     </div>
 </center>
 </body>
