--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
              justify-content: center;
   ">
 				<a href="/alloftheabove/chris">
-				<img src="/alloftheabove/coolstuff/ccnow.png">
+				<img src="/alloftheabove/coolstuff/ccnow.png" width="30px" length="30px">
 				</a>
 				<p>"This website gave me rabies. Perfect 10/10!!" - Chris, of whom we will now copy.</p>
   	</div>
