--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 		.scroll-box {
     height: 100px;        /* Sets a fixed height */
     width: 300px;         /* Sets a fixed width */
-    border: 1px solid #ccc; /* Adds a border for visibility */
+    border: 2px solid #ccc; /* Adds a border for visibility */
     overflow: auto;       /* Adds scroll bars only when needed */
     padding: 10px;        /* Adds some space around the text */
+	font-size: 8px;
 }
 		    body {
       background-color: #4C56BA;
@@ -83,9 +84,23 @@
              justify-content: center;
   ">
 				<a href="/alloftheabove/chris">
-				<img src="/alloftheabove/coolstuff/ccnow.png" width="30px" length="30px">
+				<img src="/alloftheabove/coolstuff/ccnow.png" width="70px" length="70px">
 				</a>
 				<p>"This website gave me rabies. Perfect 10/10!!" - Chris, of whom we will now copy.</p>
+  	</div>
+							<div class="double" 
+      style="border: 3px solid #ddd;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+	<h1>UPDATES</h1>
+	<div class="scroll-box" align="center">
+    <p>placeholder</p>
+</div>
   	</div>
 		</div>
     </div>
