--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		.scroll-box {
     height: 100px;        /* Sets a fixed height */
     width: 300px;         /* Sets a fixed width */
-    border: 2px solid #ccc; /* Adds a border for visibility */
+    border: 3px double #ccc; /* Adds a border for visibility */
     overflow: auto;       /* Adds scroll bars only when needed */
     padding: 10px;        /* Adds some space around the text */
-	font-size: 8px;
+	font-size: 12px;
 }
 		    body {
       background-color: #4C56BA;
@@ -98,10 +98,10 @@
              justify-content: center;
   ">
 	<h1>UPDATES</h1>
-	<div class="scroll-box" align="center">
+  	</div>
+			<div class="scroll-box" align="center">
     <p>placeholder</p>
 </div>
-  	</div>
 		</div>
     </div>
 </center>
