--- a/index.html
+++ b/index.html
@@ -82,12 +82,37 @@
              display: flex;
              align-items: center;
              justify-content: center;
+			 flex-direction: column;
+  ">
+							<div class="double" 
+      style="border: 2px solid #ddd;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
   ">
 				<a href="/alloftheabove/chris">
 				<img src="/alloftheabove/coolstuff/ccnow.png" width="70px" length="70px">
 				</a>
 				<p>"This website gave me rabies. Perfect 10/10!!" - Chris, of whom we will now copy.</p>
   	</div>
+	<div class="double" 
+      style="border: 2px solid #ddd;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+				<a href="/alloftheabove/texturepack">
+				<img src="/alloftheabove/coolstuff/ccnow.png" width="70px" length="70px">
+				</a>
+				<p>Download my Minecraft texture pack for Java 1.6.4! (COMING SOON)</p>
+  	</div>
+	</div>
 							<div class="double" 
       style="border: 3px solid #ddd;
 		     border-style: double;
