--- a/index.html
+++ b/index.html
@@ -3,6 +3,29 @@
 <head>
   <title>Where stupidity roams free</title>
   <style>
+a:link {
+  color: black;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: dark grey;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  color: black;
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: black;
+  background-color: transparent;
+  text-decoration: underline;
+}
 	  div.double {border-style: double;}
 	  h1 {
 		  text-align: center;
@@ -125,6 +148,18 @@
   	</div>
 			<div class="scroll-box" align="center">
     <p>placeholder</p>
+				<p>placeholder</p>
+				<p>placeholder</p>
+				<p>placeholder</p>
+				<p>placeholder</p>
+				<p>placeholder</p>
+				<p>placeholder</p>
+				<p>placeholder</p>
+				<p>placeholder</p>
+				<p>placeholder</p>
+				<p>placeholder</p>
+				<p>placeholder</p>
+				<p>placeholder</p>
 </div>
 		</div>
     </div>
