--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@ a:active {
 				<p>placeholder</p>
 				<p>placeholder</p>
 </div>
+		<img src="alloftheabove/coolstuff/warning.png">
 		</div>
     </div>
 </center>
