--- a/index.html
+++ b/index.html
@@ -161,7 +161,16 @@ a:active {
 				<p>placeholder</p>
 				<p>placeholder</p>
 </div>
-		<img src="alloftheabove/coolstuff/warning.png">
+		<div class="double" 
+      style="border: 3px solid #ddd;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+		<img src="/coolstuff/warning.png">
 		</div>
     </div>
 </center>
