--- a/index.html
+++ b/index.html
@@ -146,7 +146,28 @@ a:active {
   ">
 	<h1>UPDATES</h1>
   	</div>
-			<div class="scroll-box" align="center">
+			
+		<div class="double" 
+      style="border: 3px solid #ddd;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+		<img src="/alloftheabove/coolstuff/warning.png">
+		</div>
+		<div class="double" 
+      style="border: 3px solid #ddd;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+							<div class="scroll-box" align="center">
     <p>placeholder</p>
 				<p>placeholder</p>
 				<p>placeholder</p>
@@ -161,17 +182,21 @@ a:active {
 				<p>placeholder</p>
 				<p>placeholder</p>
 </div>
-		<div class="double" 
-      style="border: 3px solid #ddd;
+	<div class="double" 
+      style="border: 2px solid #ddd;
 		     border-style: double;
-			 width: 100%;
+			 width: 50%;
              hight: 100%;
              display: flex;
              align-items: center;
              justify-content: center;
   ">
-		<img src="/coolstuff/warning.png">
-		</div>
+				<a href="/alloftheabove/texturepack">
+				<img src="/alloftheabove/coolstuff/ccnow.png" width="70px" length="70px">
+				</a>
+				<p>Download my Minecraft texture pack for Java 1.6.4! (COMING SOON)</p>
+  	</div>
+	</div>
     </div>
 </center>
 </body>
