--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@ a:active {
 			<div class="double" 
       style="border: 3px solid #ddd;
 		     border-style: double;
-			 width: 100%;
-             hight: 100%;
+			 width: 300px;
+             hight: 100px;
              display: flex;
              align-items: center;
              justify-content: center;
