--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ a:active {
              justify-content: center;
   ">
 				<a href="/alloftheabove/texturepack">
-				<img src="/alloftheabove/coolstuff/ccnow.png" width="70px" length="70px">
+				<img src="/alloftheabove/coolstuff/tp_preview1.gif" width="70px" length="70px">
 				</a>
 				<p>Download my Minecraft texture pack for Java 1.6.4! (COMING SOON)</p>
   	</div>
