--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ a:active {
 		  text-align: center;
 	  }
 		.scroll-box {
+	background-color: #3A4487;
     height: 100px;        /* Sets a fixed height */
     width: 300px;         /* Sets a fixed width */
     border: 3px double #ccc; /* Adds a border for visibility */
@@ -62,6 +63,7 @@ a:active {
 		">
 		<div class="double" 
       style="border: 3px solid #ddd;
+			background-color: #3A4487;
 		     border-style: double;
 			 width: 100%;
              hight: 100%;
@@ -108,6 +110,7 @@ a:active {
   ">
 							<div class="double" 
       style="border: 2px solid #ddd;
+			background-color: #3A4487;
 		     border-style: double;
 			 width: 50%;
              hight: 100%;
@@ -122,6 +125,7 @@ a:active {
   	</div>
 	<div class="double" 
       style="border: 2px solid #ddd;
+		background-color: #3A4487;
 		     border-style: double;
 			 width: 50%;
              hight: 100%;
@@ -144,7 +148,7 @@ a:active {
              align-items: center;
              justify-content: center;
   ">
-	<h1>UPDATES</h1>
+	<p>UPDATES</p>
   	</div>
 		<div class="double" 
       style="border: 3px solid #ddd;
