--- a/index.html
+++ b/index.html
@@ -160,19 +160,8 @@ a:active {
              justify-content: center;
   ">
 							<div class="scroll-box" align="center">
-    <p>placeholder</p>
-				<p>placeholder</p>
-				<p>placeholder</p>
-				<p>placeholder</p>
-				<p>placeholder</p>
-				<p>placeholder</p>
-				<p>placeholder</p>
-				<p>placeholder</p>
-				<p>placeholder</p>
-				<p>placeholder</p>
-				<p>placeholder</p>
-				<p>placeholder</p>
-				<p>placeholder</p>
+    <p>01/18/26</p>
+	<p>Started this site!</p>
 </div>
 			<div class="double" 
       style="border: 3px solid #ddd;
