--- a/friends.html
+++ b/friends.html
@@ -131,7 +131,7 @@ a:active {
              align-items: center;
              justify-content: center;
   ">
-				<img src="/alloftheabove/coolstuff/vac1.png" width="70px" length="70px">
+				<img src="/alloftheabove/coolstuff/vac1.jpg" width="70px" length="70px">
 				<p><a href="https://vacaroni.bandcamp.com/"vacaroni.bandcamp.com</a>/</p>
     <p>Vac's Bandcamp! He has a bunch of cool music there, it's well worth a listen!</p>
   	</div>
