--- a/friends.html
+++ b/friends.html
@@ -98,15 +98,6 @@ a:active {
 		<h1>FRIENDS.</h1>
 		<p>This page is for my friends and their web-doings!</p>
   	</div>
-					<div class="double" 
-      style="border: 3px solid #ddd;
-		     border-style: double;
-			 width: 100%;
-             hight: 100%;
-             display: flex;
-             align-items: center;
-             justify-content: center;
-  ">
 							<div class="double" 
       style="border: 2px solid #ddd;
 			background-color: #3A4487;
@@ -132,10 +123,9 @@ a:active {
              justify-content: center;
   ">
 				<img src="/alloftheabove/coolstuff/vac1.jpg" width="70px" length="70px">
-				<p><a href="https://vacaroni.bandcamp.com/"vacaroni.bandcamp.com</a>/</p>
+				<p><a href="https://vacaroni.bandcamp.com/">vacaroni.bandcamp.com</a>/</p>
     <p>Vac's Bandcamp! He has a bunch of cool music there, it's well worth a listen!</p>
   	</div>
-	</div>
 	</div>
     </div>
 </center>
