--- a/friends.html
+++ b/friends.html
@@ -109,7 +109,7 @@ a:active {
              justify-content: center;
   ">
 				<img src="/alloftheabove/coolstuff/juno1.png" width="70px" length="70px">
-				<p><a href="https://www.thisisjunoswebsite.com/">thisisjunoswebsite.com</p>
+				<h1 style="font-size; 15px;"><a href="https://www.thisisjunoswebsite.com/">thisisjunoswebsite.com</h1>
         <p>Juno's site! He has some cool things there, a whole lotta easter eggs and secrets.</p>
   	</div>
 	<div class="double" 
