--- a/friends.html
+++ b/friends.html
@@ -108,8 +108,9 @@ a:active {
              align-items: center;
              justify-content: center;
   ">
+				<a href="https://www.thisisjunoswebsite.com/">
 				<img src="/alloftheabove/coolstuff/juno1.png" width="70px" length="70px">
-				<h1 style="font-size; 15px;"><a href="https://www.thisisjunoswebsite.com/">thisisjunoswebsite.com</h1>
+				</a>
         <p>Juno's site! He has some cool things there, a whole lotta easter eggs and secrets.</p>
   	</div>
 	<div class="double" 
@@ -122,8 +123,9 @@ a:active {
              align-items: center;
              justify-content: center;
   ">
+		        <a href="https://vacaroni.bandcamp.com/">
 				<img src="/alloftheabove/coolstuff/vac1.jpg" width="70px" length="70px">
-				<p><a href="https://vacaroni.bandcamp.com/">vacaroni.bandcamp.com</a>/</p>
+	            </a>
     <p>Vac's Bandcamp! He has a bunch of cool music there, it's well worth a listen!</p>
   	</div>
 	</div>
