--- a/friends.html
+++ b/friends.html
@@ -96,7 +96,7 @@ a:active {
 			 flex-direction: column;
   ">
 		<h1>FRIENDS.</h1>
-		<p>This page is for my friends and their web-doings!</p>
+		<p>This page is for my friends and their web-doings! Click on their pictures to visit their sites!</p>
   	</div>
 							<div class="double" 
       style="border: 2px solid #ddd;
