--- a/friends.html
+++ b/friends.html
@@ -95,7 +95,7 @@ a:active {
              justify-content: center;
 			 flex-direction: column;
   ">
-		<h1>FRIENDS.</h1>
+		<h1>FRIENDS</h1>
 		<p>This page is for my friends and their web-doings! Click on their pictures to visit their sites!</p>
   	</div>
 							<div class="double" 
