--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ a:active {
              justify-content: center;
 			 flex-direction: column;
   ">
-		<h1>WELCOME TO ALLOFTHEABOVE.</h1>
+		<h1>WELCOME TO ALLOFTHEABOVE</h1>
 		<p>This is basically just a place for me to put random whatever I want. Maybe my friends will let me put some of their stuff here too, who knows?
 			Don't expect this site to have anything sophisticated on it, or whatever.</p>
   	</div>
