--- a/artwork.html
+++ b/artwork.html
@@ -98,21 +98,6 @@ a:active {
 		<h1>FRIENDS</h1>
 		<p>This page is for my friends and their web-doings! Click on their pictures to visit their sites!</p>
   	</div>
-							<div class="double" 
-      style="border: 2px solid #ddd;
-			background-color: #3A4487;
-		     border-style: double;
-			 width: 100%;
-             hight: 100%;
-             display: flex;
-             align-items: center;
-             justify-content: center;
-  ">
-				<a href="https://www.thisisjunoswebsite.com/">
-				<img src="/alloftheabove/coolstuff/juno1.png" width="70px" length="70px">
-				</a>
-        <p>Juno's site! He has some cool things there, a whole lotta easter eggs and secrets.</p>
-  	</div>
 	<div class="double" 
       style="border: 2px solid #ddd;
 		background-color: #3A4487;
@@ -123,7 +108,43 @@ a:active {
              align-items: center;
              justify-content: center;
   ">
-				<img src="/alloftheabove/coolstuff/pastafrog25ad1">
+				<img src="/alloftheabove/coolstuff/pastafrog25ad1.png">
+  	</div>
+		<div class="double" 
+      style="border: 2px solid #ddd;
+		background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+				<img src="/alloftheabove/coolstuff/friends.png">
+  	</div>
+		<div class="double" 
+      style="border: 2px solid #ddd;
+		background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+				<img src="/alloftheabove/coolstuff/buildingtomorrowsfuture.png">
+  	</div>
+		<div class="double" 
+      style="border: 2px solid #ddd;
+		background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+				<img src="/alloftheabove/coolstuff/gaycat.png">
   	</div>
 	</div>
     </div>
