--- a/artwork.html
+++ b/artwork.html
@@ -95,8 +95,8 @@ a:active {
              justify-content: center;
 			 flex-direction: column;
   ">
-		<h1>FRIENDS</h1>
-		<p>This page is for my friends and their web-doings! Click on their pictures to visit their sites!</p>
+		<h1>ARTWORK</h1>
+		<p>Art I've made.</p>
   	</div>
 	<div class="double" 
       style="border: 2px solid #ddd;
@@ -108,7 +108,7 @@ a:active {
              align-items: center;
              justify-content: center;
   ">
-				<img src="/alloftheabove/coolstuff/pastafrog25ad1.png">
+				<img src="/alloftheabove/coolstuff/pastafrog25ad1.png" width="100px" legth="100px">
   	</div>
 		<div class="double" 
       style="border: 2px solid #ddd;
@@ -120,7 +120,7 @@ a:active {
              align-items: center;
              justify-content: center;
   ">
-				<img src="/alloftheabove/coolstuff/friends.png">
+				<img src="/alloftheabove/coolstuff/friends.png" width="100px" legth="100px">
   	</div>
 		<div class="double" 
       style="border: 2px solid #ddd;
@@ -132,7 +132,7 @@ a:active {
              align-items: center;
              justify-content: center;
   ">
-				<img src="/alloftheabove/coolstuff/buildingtomorrowsfuture.png">
+				<img src="/alloftheabove/coolstuff/buildingtomorrowsfuture.png" width="100px" legth="100px">
   	</div>
 		<div class="double" 
       style="border: 2px solid #ddd;
@@ -144,7 +144,7 @@ a:active {
              align-items: center;
              justify-content: center;
   ">
-				<img src="/alloftheabove/coolstuff/gaycat.png">
+				<img src="/alloftheabove/coolstuff/gaycat.png" width="100px" legth="100px">
   	</div>
 	</div>
     </div>
