--- a/chris.html
+++ b/chris.html
@@ -95,8 +95,8 @@ a:active {
              justify-content: center;
 			 flex-direction: column;
   ">
-		<h1>FRIENDS</h1>
-		<p>This page is for my friends and their web-doings! Click on their pictures to visit their sites!</p>
+		<h1>CHRIS</h1>
+		<p>copy chris now</p>
   	</div>
 							<div class="double" 
       style="border: 2px solid #ddd;
