--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ a:active {
   ">
 							<div class="scroll-box" align="center">
     <p>01/18/26</p>
-	<p>Started this site!</p>
+	<p>Started this site! So far only this page, the friends page, and the art page exist. I'll add more later.</p>
 </div>
 			<div class="double" 
       style="border: 3px solid #ddd;
