--- a/artwork.html
+++ b/artwork.html
@@ -110,6 +110,18 @@ a:active {
   ">
 				<img src="/alloftheabove/coolstuff/pastafrog25ad1.png" width="300px" legth="300px">
   	</div>
+				<div class="double" 
+      style="border: 2px solid #ddd;
+		background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+				<img src="/alloftheabove/coolstuff/globe.png" width="300px" legth="300px">
+  	</div>
 		<div class="double" 
       style="border: 2px solid #ddd;
 		background-color: #3A4487;
