--- a/pecan.html
+++ b/pecan.html
@@ -106,7 +106,7 @@ a:active {
              hight: 100%;
              display: flex;
              align-items: center;
-             justify-content: cente
+             justify-content: center
   ">
     <p>Pecan is a male grey tabby that was hit by a car sometime around November 2024. He's all patched up now, but he has a screw in his arm (my mom thinks it's gross XD). We got him in mid-January 2025 from a pet shelter, and he's been with us ever since.</p>
     <br>
