--- a/other.html
+++ b/other.html
@@ -95,8 +95,8 @@ a:active {
              justify-content: center;
 			 flex-direction: column;
   ">
-		<h1>FRIENDS</h1>
-		<p>This page is for my friends and their web-doings! Click on their pictures to visit their sites!</p>
+		<h1>OTHER STUFF</h1>
+		<p>This page has links to other cool websites I think you should check out!</p>
   	</div>
 							<div class="double" 
       style="border: 2px solid #ddd;
