--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@ a:active {
              justify-content: center;
   ">
 							<div class="scroll-box" align="center">
+	<p>01/23/26</p>
+    <p>Alright, it's been a bit since I updated this site, but I was busy with other things. Like the Splattiverse!!! I made that!!! Dunno if it'll ever be public or anything, if it does end up being public it'll be after months of work, it literally just started.</p>
+	<br>
+	<p>So, for the actual updates, all the pages work! Keyword "work". Not everything is fully there yet, the about page especially needs work, but I'll work on it later. For the first time ever I have a technically finished website I don't hate! Only took me three years!</p>
     <p>01/18/26</p>
 	<p>Started this site! So far only this page, the friends page, and the art page exist. I'll add more later.</p>
 </div>
