--- a/blog.html
+++ b/blog.html
@@ -98,6 +98,21 @@ a:active {
 		<h1>OTHER STUFF</h1>
 		<p>This page has links to other cool websites I think you should check out!</p>
   	</div>
+									<div class="double" 
+      style="border: 2px solid #ddd;
+			background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+				<img src="/alloftheabove/images/blog/jan232026.png" width="70px" length="70px">
+				<div class="scroll-box" align="center">
+					<p>thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!thisis at est!!</p>
+</div>
+  	</div>
 							<div class="double" 
       style="border: 2px solid #ddd;
 			background-color: #3A4487;
