--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@ a:active {
   		<p><a href="/alloftheabove/links">Links</a></p>
    	    <p>⠀⠀</p>
   		<p><a href="/alloftheabove/friends">Friends</a></p>
+		<p>⠀⠀</p>
+  		<p><a href="/alloftheabove/blog">Blog</a></p>
   	</div>
 			<div class="double" 
       style="border: 3px solid #ddd;
@@ -160,6 +162,8 @@ a:active {
              justify-content: center;
   ">
 							<div class="scroll-box" align="center">
+	<p>01/24/26</p>
+	<p>Added a blog section. <a href="/alloftheabove/blog">Blog >>></a></p>
 	<p>01/23/26</p>
     <p>Alright, it's been a bit since I updated this site, but I was busy with other things. Like the Splattiverse!!! I made that!!! Dunno if it'll ever be public or anything, if it does end up being public it'll be after months of work, it literally just started.</p>
 	<br>
