--- a/chris.html
+++ b/chris.html
@@ -84,6 +84,8 @@ a:active {
   		<p><a href="/alloftheabove/links">Links</a></p>
    	    <p>⠀⠀</p>
   		<p><a href="/alloftheabove/friends">Friends</a></p>
+		<p>⠀⠀</p>
+  		<p><a href="/alloftheabove/blog">Blog</a></p>
   	</div>
 			<div class="double" 
       style="border: 3px solid #ddd;
