--- a/blog.html
+++ b/blog.html
@@ -110,6 +110,29 @@ a:active {
              align-items: center;
              justify-content: center;
   ">
+				<img src="/alloftheabove/images/blog/jan272026.png" width="70px" length="70px">
+				<div class="scroll-box" align="center">
+					<p>Some things happened..</p>
+					<br>
+					<p>OKOK FIRST THING.... Vacaroni CDs are real!!! More specifically, Late Corner CDs. You know Late Corner, Vac's "joke" band? Well, they just put out a live album AND a new studio EP , and released limited edition CD-Rs of the live album! I already purchased a copy because it's funny, you can buy them <a href="https://latecornermusic.bandcamp.com/album/the-latest-corner">here</a>.</p>
+					<br>
+					<p>Second thing.. I put put a new album! ..kinda. It's under my joke band Sapphire Spirit. It's a joke album and not meant to be taken seriously. ..but it still happened! You can download that <a href="https://sapphirespirit.bandcamp.com/album/the-moment-i-shot-my-eyes-out-with-a-bb-gun-and-saw-god">here</a>.</p>
+					<br>
+					<p>I also made myself a patreon!! You can follow that <a href="https://www.patreon.com/cw/Spottz">here</a>. There's no paid tier as I have no way of recieving the money, so if you want to give me money, you're out of luck kiddo.</p>
+					<br>
+					<p>Also, snow update. The schools are closed for a few more days, and apparently it's supposed to snow EVEN MORE on friday (i think, could've been sataurday). HOPEFULLY we can get a delivery order in on thursday so we can replenish our food supplies, might not happen though. Stay safe out there in the snow, I'd hate for you to lose your soul!</p>
+</div>
+  	</div>
+									<div class="double" 
+      style="border: 2px solid #ddd;
+			background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
 				<img src="/alloftheabove/images/blog/jan242026.png" width="70px" length="70px">
 				<div class="scroll-box" align="center">
 					<p>IT SNOWED!!!!!!</p>
