--- a/music.html
+++ b/music.html
@@ -111,6 +111,23 @@ a:active {
              justify-content: center;
              flex-direction: column;
   ">
+<p>Mr. Clockman (Instrumental) • <a href="/alloftheabove/coolstuff/music/theclockman.mp3">MP3</a> • <a href="/alloftheabove/coolstuff/music/msclockman3.mid.mp3">MIDI</a></p>
+      <audio controls>
+  <source src="/alloftheabove/coolstuff/music/theclockman.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+  	</div>
+							<div class="double" 
+      style="border: 2px solid #ddd;
+			background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+             flex-direction: column;
+  ">
 <p>Dance of the Lost Souls (Unfinished) • <a href="/alloftheabove/coolstuff/music/lost.mp3">MP3</a></p>
       <audio controls>
   <source src="/alloftheabove/coolstuff/music/lost.mp3" type="audio/mpeg">
