--- a/music/index.html
+++ b/music/index.html
@@ -100,6 +100,21 @@ a:active {
 		<h1>MUSIC</h1>
 		<p>Music I've made.</p>
   	</div>
+	<div class="double" 
+      style="border: 2px solid #ddd;
+		background-color: #3A4487;
+		     border-style: double;
+			 width: 50%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+				<a href="/alloftheabove/music/demonstrations.zip">
+				<img src="/alloftheabove/images/demonstrations.png" width="70px" length="70px">
+				</a>
+				<p>Download my demo EP "Demonstrations" in beautiful 64kpbs quality!</p>
+  	</div>
 							<div class="double" 
       style="border: 2px solid #ddd;
 			background-color: #3A4487;
