--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@ a:active {
    	    <p>⠀⠀</p>
   		<p><a href="/alloftheabove/about">About</a></p>
    	    <p>⠀⠀</p>
-  		<p><a href="/alloftheabove/music">Music</a></p>
+  		<p><a href="/alloftheabove/music/index">Music</a></p>
    	    <p>⠀⠀</p>
   		<p><a href="/alloftheabove/artwork">Art</a></p>
    	    <p>⠀⠀</p>
