--- a/music/index.html
+++ b/music/index.html
@@ -75,7 +75,7 @@ a:active {
    	    <p>⠀⠀</p>
   		<p><a href="/alloftheabove/about">About</a></p>
    	    <p>⠀⠀</p>
-  		<p><a href="/alloftheabove/music">Music</a></p>
+  		<p><a href="/alloftheabove/music/index">Music</a></p>
    	    <p>⠀⠀</p>
   		<p><a href="/alloftheabove/artwork">Art</a></p>
    	    <p>⠀⠀</p>
@@ -104,16 +104,15 @@ a:active {
       style="border: 2px solid #ddd;
 		background-color: #3A4487;
 		     border-style: double;
-			 width: 50%;
+			 width: 100%;
              hight: 100%;
              display: flex;
              align-items: center;
              justify-content: center;
   ">
-				<a href="/alloftheabove/music/demonstrations.zip">
 				<img src="/alloftheabove/images/demonstrations.png" width="70px" length="70px">
-				</a>
 				<p>Download my demo EP "Demonstrations" in beautiful 64kpbs quality!</p>
+		        <p><a href="/alloftheabove/music/demonstrations.zip">Download >>></a></p>
   	</div>
 							<div class="double" 
       style="border: 2px solid #ddd;
