--- a/music/index.html
+++ b/music/index.html
@@ -111,9 +111,7 @@ a:active {
              justify-content: center;
   ">
 				<img src="/alloftheabove/images/demonstrations.png" width="70px" length="70px">
-				<p>Download my demo EP "Demonstrations" in beautiful 64kpbs quality!</p>
-		        <br>
-		        <p><a href="/alloftheabove/music/demonstrations.zip">Download >>></a></p>
+				<p>Download my demo EP "Demonstrations" in beautiful 64kpbs quality! <a href="/alloftheabove/music/demonstrations.zip">Download >>></a></p>
   	</div>
 							<div class="double" 
       style="border: 2px solid #ddd;
