--- a/blog.html
+++ b/blog.html
@@ -100,6 +100,31 @@ a:active {
 		<h1>BLOG</h1>
 		<p>My blog I update sometimes.</p>
   	</div>
+											<div class="double" 
+      style="border: 2px solid #ddd;
+			background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+				<img src="/alloftheabove/images/blog/feb012026.png" width="70px" length="70px">
+				<div class="scroll-box" align="center">
+					<p>FAWM FAWM FAWM IS HERE!!!!!!!!</p>
+					<br>
+					<p>It's that time of year, folks. The time where we try (and probably fail) to write an albums worth of songs in 28 days. If you haven't ever heard of FAWM, please check it out at <a href="https://fawm.org/">fawm.org</a>, it'll tell you everything you need to know. But, if you're stubborn and refuse to visit sites you don't know, I'll give you the rundown:</p>
+					<br>
+					<p>FAWM (short for "February Album Writing Month") is a songwriting challenge where you try to write 14 songs in 28 days. They don't have to be fully finished, produced, mixed, etc., they just need to exist. You could continue working on your FAWM songs for as long as you like! And you don't even need to do the full 14 songs, you can do as many as you like.</p>
+					<br>
+					<p>Doesn't that sound interesting? It sure does to me, which is why I will be participating this year! If all goes to plan, <em>hopefully</em> I'll have enough songs to start an album with. I'll update this blog with my progress.</p>
+					<br>
+					<p>In other news, my <a href="https://latecornermusic.bandcamp.com/album/the-latest-corner">Late Corner</a> CD say it'll be arriving TOMORROW. I doubt it. The roads still have snow on them (though i can see lots of pavement!). My Russian Spy Camera CD says it'll be here by friday, which I find much more believable.</p>
+					<br>
+					<p>Basically, to summarize this entry, hoogabooga FAWM + CDs shipped.</p>
+</div>
+  	</div>
 									<div class="double" 
       style="border: 2px solid #ddd;
 			background-color: #3A4487;
