--- a/music/index.html
+++ b/music/index.html
@@ -124,6 +124,57 @@ a:active {
              justify-content: center;
              flex-direction: column;
   ">
+<p>Bryston Beat • <a href="/alloftheabove/coolstuff/music/bryston25.mp3">MP3</a></p>
+      <audio controls>
+  <source src="/alloftheabove/coolstuff/music/bryston25.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+  	</div>
+							<div class="double" 
+      style="border: 2px solid #ddd;
+			background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+             flex-direction: column;
+  ">
+<p>Dracula's Curse (Unfinished) • <a href="/alloftheabove/coolstuff/music/drac.mp3">MP3</a></p>
+      <audio controls>
+  <source src="/alloftheabove/coolstuff/music/drac.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+  	</div>
+							<div class="double" 
+      style="border: 2px solid #ddd;
+			background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+             flex-direction: column;
+  ">
+<p>Jimmy Tinkletoes Theme • <a href="/alloftheabove/coolstuff/music/jimmy.mp3">MP3</a></p>
+      <audio controls>
+  <source src="/alloftheabove/coolstuff/music/jimmy.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
+  	</div>
+							<div class="double" 
+      style="border: 2px solid #ddd;
+			background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+             flex-direction: column;
+  ">
 <p>Mr. Clockman (Instrumental) • <a href="/alloftheabove/coolstuff/music/clockmans.mp3">MP3</a> • <a href="/alloftheabove/coolstuff/music/msclockman3.mid">MIDI</a></p>
       <audio controls>
   <source src="/alloftheabove/coolstuff/music/clockmans.mp3" type="audio/mpeg">
