--- a/links.html
+++ b/links.html
@@ -100,6 +100,21 @@ a:active {
 		<h1>LINKS</h1>
 		<p>My profiles on other sites.</p>
   	</div>
+<div class="double" 
+      style="border: 2px solid #ddd;
+			background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+				<a href="https://wiki.cojumpendium.net/User:Spottz">
+				<img src="/alloftheabove/images/cojum wiki icon.png" width="70px" length="70px">
+				</a>
+        <p>My profile on the Cojumpendium Wiki.</p>
+  	</div>
     							<div class="double" 
       style="border: 2px solid #ddd;
 			background-color: #3A4487;
