--- a/blog.html
+++ b/blog.html
@@ -117,11 +117,11 @@ a:active {
 					<p>I don't really celebrate Valentine's Day (for many reasons, mainly my aromanticism), so I don't really have anything Valentine-specific to post about. Instead, I thought I'd update y'ou'all on what's been happening these past two weeks since my last post.</p>
 					<br>
 					<p>Firstly.. my Late Corner CD arrived! Included in the package was a bonus CD: the TAOMOS Sampler CD!!! That CD hadn't been posted online ever, and this the ONLY copy in existance. It is officially the rarest thing in my collection.</p>
-					<img src="/alloftheabove/images/vaccds.jpg">
+					<img src="/alloftheabove/images/vaccds.jpg" width="100px" hight="100px">
 					<p>Secondly.. my Russian Spy Camera CD arrived!!! RSC is a band I've been researching for a few months now, there's not a lot about them online, but one of the things thst seems to be in "abundance" are these CDs. There's a few on Amazon, one on a record store website, and a couple on Discogs. From what I can gather, this seems to be the only CD they ever released, despite there being three studio albums from this band. There were plans for a CD release of their second album (which i very much prefer to this one), but that didn't happen for very odd reasons. Anywho, I'm glad to have this obscure piece of the 2000s Athens scene in my collection.</p>
-					<img src="/alloftheabove/images/IGOTIT.jpg">
+					<img src="/alloftheabove/images/IGOTIT.jpg" width="100px" hight="100px">
 					<p>And finally.. my Cojum Dip stickers arrived!! So, back on like the fifth I think?? Bora made a Shopify store for Cojum Dip (<a href="https://cojumdip.myshopify.com/">shop.cojumdip.com</a>) where he's selling the Sonic Lunch merchendise. I managed to snag me some stickers from it!! I am very very pleased to own some of the very few Cojum Dip merch in existance (of course i know quite a few people have the sonic lunch merch, but like, theres the sonic lunch merch and the 2005 shirts and thats basically it lmao).</p>
-					<img src="/alloftheabove/images/cojumstickers.jpg">
+					<img src="/alloftheabove/images/cojumstickers.jpg" width="100px" hight="100px">
 					<p>Alright, so about FAWM.. I kinda haven't done it much. I have two actual songs in the works, a joke song, an ultrabox song, and an instrumental. That's it. Hopefully by the end of the month I'll at least have a few more songs to start a project off of.</p>
 </div>
   	</div>
