--- a/links.html
+++ b/links.html
@@ -145,6 +145,21 @@ a:active {
 				</a>
         <p>My Frutiger Aero Archive forum profile.</p>
   	</div>
+<div class="double" 
+      style="border: 2px solid #ddd;
+			background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+				<a href="https://www.patreon.com/cw/Spottz">
+				<img src="https://c14.patreon.com/fhd_Patreon_Symbol_6fff9723d3.png" width="70px" length="70px">
+				</a>
+        <p>My Patreon page where I post things sometimes.</p>
+  	</div>
   							<div class="double" 
       style="border: 2px solid #ddd;
 			background-color: #3A4487;
