--- a/blog.html
+++ b/blog.html
@@ -100,6 +100,27 @@ a:active {
 		<h1>BLOG</h1>
 		<p>My blog I update sometimes.</p>
   	</div>
+<div class="double" 
+      style="border: 2px solid #ddd;
+			background-color: #3A4487;
+		     border-style: double;
+			 width: 100%;
+             hight: 100%;
+             display: flex;
+             align-items: center;
+             justify-content: center;
+  ">
+				<img src="/alloftheabove/images/blog/feb172026.png" width="70px" length="70px">
+				<div class="scroll-box" align="center">
+					<p>BORA PLEASE I BEG ON BEHALF OF THE ENTIRE COJUM DIP COMMUNITY, RELEASE THE REMASTERS<br></p>
+					<p>ITS BEEN NEARLY TWO DAYS AND NOTHING, NOT EVEN A SHRED OF THEM<br></p>
+					<p>WE ARE LOSING OUR MINDS, BORA. PLEASE</p>
+					<br>
+					<p>PLEASE FULFILL THE PROPHECY OF FEBRUARY 18TH, PLEASE. THERES NOT MUCH TIME LEFT BEFORE WE ALL DESCEND INTO MADNESS.<br></p>
+					<p>ALMOST ALL HOPE IS LOST. WE RUN ON COPIUM AND THE PROPHECY OF 2026. PLEASE BORA, DO THIS FOR US.</p>
+					<img src="/alloftheabove/images/BORA PLEASE.png">
+					<p><em>its not too late.</em></p>
+</div>
 											<div class="double" 
       style="border: 2px solid #ddd;
 			background-color: #3A4487;
