--- a/blog.html
+++ b/blog.html
@@ -120,6 +120,7 @@ a:active {
 					<p>ALMOST ALL HOPE IS LOST. WE RUN ON COPIUM AND THE PROPHECY OF 2026. PLEASE BORA, DO THIS FOR US.</p>
 					<img src="/alloftheabove/images/BORA PLEASE.png">
 					<p><em>its not too late.</em></p>
+				</div>
 </div>
 											<div class="double" 
       style="border: 2px solid #ddd;
