--- a/blog.html
+++ b/blog.html
@@ -120,6 +120,10 @@ a:active {
 					<p>ALMOST ALL HOPE IS LOST. WE RUN ON COPIUM AND THE PROPHECY OF 2026. PLEASE BORA, DO THIS FOR US.</p>
 					<img src="/alloftheabove/images/BORA PLEASE.png">
 					<p><em>its not too late.</em></p>
+					      <audio controls>
+  <source src="/alloftheabove/coolstuff/music/releasetheremasters.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 				</div>
 </div>
 											<div class="double" 
